--- a/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
+++ b/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
@@ -299,7 +299,7 @@
 										{{ _self.renderDataFieldBlock(grandchild, source, compare, (attribute(compareCollectionRawData, idx) is defined?attribute(compareCollectionRawData, idx):null), '', subpath) }}
 									</div>
 									{% if grandchild.fieldType.displayOptions.lastOfRow is defined and grandchild.fieldType.displayOptions.lastOfRow %}
-										</div><div class="row">
+										<div class="clearfix"></div>
 									{% endif %}
 								{% endfor %}
 							</div>
@@ -353,7 +353,7 @@
 				{{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path) }}
 			</div>
 			{% if child.fieldType.displayOptions.lastOfRow is defined and child.fieldType.displayOptions.lastOfRow %}
-				</div><div class="row">
+                <div class="clearfix"></div>
 			{% endif %}
 		{% endfor %}
 	</div>
@@ -392,7 +392,7 @@
 				{{ _self.renderDataFieldBlock(child, source, compare, compareSubRawData, '', path) }}
 			</div>
 			{% if child.fieldType.displayOptions.lastOfRow is defined and child.fieldType.displayOptions.lastOfRow %}
-				</div><div class="row">
+				<div class="clearfix"></div>
 			{% endif %}
 		{% endfor %}
 	</div>
