fix: render textare as non-html and replace nl by br (|nl2br)

--- a/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
+++ b/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
@@ -644,7 +644,7 @@
 		<dd>
 			<div class="panel panel-default">
 				<div class="panel-body">
-                    {{ diff_text(dataField.rawData, compare, dataField.fieldType.name, compareRawData)|raw }}
+                    {{ diff(dataField.rawData, attribute(compareRawData, dataField.fieldType.name)|default(null), compare, true, false)|nl2br }}
 				</div>
 			</div>
 		</dd>
