feat: tag field in shecdule form

--- a/EMS/core-bundle/src/Resources/views/schedule/form.html.twig
+++ b/EMS/core-bundle/src/Resources/views/schedule/form.html.twig
@@ -17,6 +17,8 @@
                         {{ form_row(form.cron) }}
                         <div class="clearfix"></div>
                         {{ form_row(form.command) }}
+                        <div class="clearfix"></div>
+                        {{ form_row(form.tag) }}
                     </div>
                 </div>
                 <div class="box-footer">
