--- a/demo/skeleton/template/variables.twig
+++ b/demo/skeleton/template/variables.twig
@@ -6,7 +6,7 @@
     {% set wyiwygReplaces = {
         'src="https://www.youtube.com/': 'allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen src="https://www.youtube-nocookie.com/',
     } %}
-    {% set assetPath = emsch_assets_version('cb9ebc9034a0ed3601a3bd3fa2166610e1b42c5e') %}
+    {% set assetPath = emsch_assets_version(include('@EMSCH/template/asset_hash.twig')) %}
     {% set baseUrl = '/' %}
     {% if app.user %}
         {% set baseUrl = "/channel/#{trans_default_domain}" %}
