feat: add load more spinner for files

--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -222,6 +222,17 @@ div.media-lib {
         }
       }
     }
+
+    div.media-lib-load-more {
+        &.show-load-more { display: flex; }
+        display: none;
+        color: #777777;
+        justify-content: center;
+        align-items: center;
+        column-gap: 8px;
+        padding: 16px 16px 64px 16px;
+        font-weight: bold;
+    }
   }
 
   div.media-lib-footer {
@@ -233,4 +244,6 @@ div.media-lib {
       min-height: 30px;
     }
   }
+
+
 }
