--- a/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
@@ -23,6 +23,7 @@
             <div class="media-lib-files">
                 <ul class="media-lib-list-uploads"></ul>
                 <ul class="media-lib-list-files"></ul>
+                {{ block('loadMore') }}
             </div>
         </div>
     </div>
