--- a/EMS/core-bundle/src/Resources/views/components/media_library/component_elements.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/component_elements.html.twig
@@ -1,13 +1,13 @@
 {% trans_default_domain 'emsco-component' %}
 
 {% block buttonHome %}
-    <button class="btn btn-sm btn-primary btn-home">
+    <button class="btn btn-sm btn-default btn-home">
         <i class="fa fa-home" aria-hidden="true"></i> {{ 'media_library.home'|trans }}
     </button>
 {% endblock %}
 
 {% block buttonAddFolder %}
-    <button class="btn btn-sm btn-primary btn-add-folder">
+    <button class="btn btn-sm btn-default btn-add-folder">
         <i class="fa fa-folder" aria-hidden="true"></i> {{ 'media_library.folder.add.title'|trans }}
     </button>
 {% endblock %}
