--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -36,7 +36,7 @@ div.media-lib {
     }
 
     ul.media-lib-list-breadcrumb {
-      display: none;
+      display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       align-items: center;
