--- a/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
@@ -1,13 +1,10 @@
 {% trans_default_domain 'emsco-component' %}
-{% use '@EMSCore/components/media_library/component_elements.html.twig' %}
+
+{% use '@EMSCore/components/media_library/elements.html.twig' %}
+
 <div class="media-lib" id="{{ id }}" data-hash="{{ hash }}">
     <div class="media-nav-bar">
-        {{ template.block('mediaLibraryHeader', {
-            'buttonHome': block('buttonHome'),
-            'buttonAddFolder': block('buttonAddFolder'),
-            'buttonUpload': block('buttonUpload'),
-            'breadcrumb': block('breadcrumb')
-        })|raw }}
+        {{ template.renderHeader|raw }}
     </div>
     <div class="media-lib-content">
         <div class="media-lib-left-column">
