--- a/demo/skeleton/template/error/error.html.twig
+++ b/demo/skeleton/template/error/error.html.twig
@@ -1,9 +1,9 @@
 {% extends '@EMSCH/template/view/language_select.html.twig' %}
 {% trans_default_domain trans_default_domain %}
 
-{% set type = (statusCode/1) < 500 ? 'warning' : 'danger' %}
+{% set type = (status_code/1) < 500 ? 'warning' : 'danger' %}
 
-{% block title %}Error{% endblock %}
+{% block title %}{{ status_text }}{% endblock %}
 
 {% block main %}
     <main role="main" class="container mt-5 mb-5" id="main-content">
@@ -12,19 +12,8 @@
                 <div class="alert alert-{{ type }}" role="alert">
                     <h1>{% block icon %}<i class="fa fa-exclamation-triangle" aria-hidden="true"></i> {% endblock %}{{ block('title') }}</h1>
                     <p>
-                        {% block description %}Error{% endblock %}
+                        {% block description %}{% endblock %}
                     </p>
-{#                    <form class="search-form">#}
-{#                        <div class="input-group">#}
-{#                            <input type="text" name="search" class="form-control" placeholder="{{ 'action.search'|trans|e('html_attr') }}" aria-label="{{ 'action.search'|trans|e('html_attr') }}" name="q">#}
-{#                            <div class="input-group-append">#}
-{#                                <button type="submit" name="submit" class="btn btn-{{ type }} btn-flat">#}
-{#                                    <i class="fa fa-search"></i>#}
-{#                                    {{ 'action.search'|trans }}#}
-{#                                </button>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </form>#}
                 </div>
             </div>
         </div>
