--- a/EMS/admin-ui-bootstrap-5-bundle/src/Resources/views/base/html5.html.twig
+++ b/EMS/admin-ui-bootstrap-5-bundle/src/Resources/views/base/html5.html.twig
@@ -6,7 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}{% endblock title %}</title>
+        {{ encore_entry_link_tags('admin-bootstrap5') }}
     </head>
-    <body>{% block body %}{% endblock body %}</body>
+    <body>
+        {% block body %}{% endblock body %}
+        {{ encore_entry_script_tags('admin-bootstrap5') }}
+    </body>
 </html>
 {% endapply %}
