--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/login.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/login.html.twig
@@ -1,4 +1,66 @@
 {% extends '@EMSAdminUI/bootstrap5/base/html5.html.twig' %}
 {%- trans_default_domain 'user' -%}
 
+{% set body_attr = {
+    class: 'login-page bg-body-secondary',
+} %}
+
 {% block title %}{{ 'user.login.title'|trans }}{% endblock title %}
+
+{% block body %}
+    <div class="login-box">
+        <div class="login-logo">
+            <a href="{{ path('homepage') }}">
+                <img alt="{{ 'user.login.alt_logo'|trans }}" src="{{ asset('images/logo.svg', 'emscore') }}" width="360">
+            </a>
+        </div>
+        <div class="card">
+            <div class="card-body login-card-body">
+                <p class="login-box-msg">{{ 'user.login.message'|trans }}</p>
+
+                {% if error %}
+                    <div class="callout callout-warning mb-2">
+                        <p>{{ error.messageKey|trans(error.messageData) }}</p>
+                    </div>
+                {% endif %}
+
+                <form method="post">
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="{{ 'user.login.user_placeholder'|trans }}" name="_username" />
+                        <div class="input-group-text">
+                            <span class="fas fa-user"></span>
+                        </div>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="password" class="form-control"placeholder="{{ 'user.login.password_placeholder'|trans }}" name="_password" />
+                        <div class="input-group-text">
+                            <span class="fas fa-lock"></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-8">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="_remember_me"/>
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    {{ 'user.login.remember_me'|trans }}
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="d-grid gap-2">
+                                <button type="submit" class="btn btn-primary">{{ 'user.login.submit'|trans }}</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+
+                <p class="mb-1">
+                    <a href="{{ path('emsco_user_resetting_request') }}">{{ 'user.login.forgot'|trans }}</a>
+                </p>
+            </div>
+        </div>
+    </div>
+{% endblock body %}
+
