--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/login.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/login.html.twig
@@ -11,7 +11,7 @@
     <div class="login-box">
         <div class="login-logo">
             <a href="{{ path('homepage') }}">
-                <img alt="{{ 'user.login.alt_logo'|trans }}" src="{{ asset('images/logo.svg', 'emscore') }}" width="360">
+                <img alt="{{ 'user.login.alt_logo'|trans }}" src="{{ asset('images/logo.svg', 'emsadminui') }}" width="360">
             </a>
         </div>
         <div class="card">
@@ -43,9 +43,7 @@
                         <div class="col-8">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="_remember_me"/>
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    {{ 'user.login.remember_me'|trans }}
-                                </label>
+                                <label class="form-check-label" for="flexCheckDefault">&nbsp;{{ 'user.login.remember_me'|trans }}</label>
                             </div>
                         </div>
                         <div class="col-4">
