--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/menu.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/menu.html.twig
@@ -1,14 +1,15 @@
 {% block sidebarMenu %}
     {% trans_default_domain 'emsco-twigs' %}
     <li class="nav-item">
-        <a href="{{ path(menu.route, menu.routeParameters) }}" class="nav-link{% if menu.color %}  text-{{ menu.color }}{% endif %}">
-            <i class="{{ menu.icon }}"></i>&nbsp;
+        <a href="{{ menu.hasChildren ? '#' : path(menu.route, menu.routeParameters) }}" class="nav-link{% if menu.color %}  text-{{ menu.color }}{% endif %}">
+            <i class="nav-icon {{ menu.icon }}"></i>&nbsp;
             <p>
                 {{ menu.translation ? menu.label|trans(menu.parameters) : menu.label }}
+                {% if menu.hasChildren %}
+                    <i class="fas fa-angle-left right"></i>
+                {% endif %}
                 {% if menu.hasBadge %}
-                    <span class="label {{ menu.badgeColor ? 'bg-'~menu.badgeColor : 'label-default' }} pull-right-container">{{ menu.badge }}</span>
-                {% elseif menu.hasChildren %}
-                    <i class="nav-arrow fa fa-angle-left"></i>
+                    <span class="badge {{ menu.badgeColor ? 'bg-'~menu.badgeColor : 'badge-info' }} right">{{ menu.badge }}</span>
                 {% endif %}
             </p>
         </a>
