--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/footer.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/footer.html.twig
@@ -2,7 +2,7 @@
 
 <footer class="main-footer">
     <a href="https://elasticms.fgov.be/" target="_blank">elastic<strong>MS</strong></a>
-    <div class="float-right d-none d-sm-inline-block">
+    <div class="float-end d-none d-sm-inline-block">
         {{ 'core.version'|trans({ '%core%': ems_version('core'), '%symfony%': ems_version('symfony') }) }}
     </div>
 </footer>
