ref: badge- to bg-

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/menu.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/menu.html.twig
@@ -9,7 +9,7 @@
                     <i class="fas fa-angle-left right"></i>
                 {% endif %}
                 {% if menu.hasBadge %}
-                    <span class="badge {{ menu.badgeColor ? 'bg-'~menu.badgeColor : 'badge-info' }} right">{{ menu.badge }}</span>
+                    <span class="badge {{ menu.badgeColor ? 'bg-'~menu.badgeColor : 'bg-info' }} right">{{ menu.badge }}</span>
                 {% endif %}
             </p>
         </a>
