--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/login.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/login.html.twig
@@ -2,19 +2,19 @@
 {%- trans_default_domain 'user' -%}
 
 {% set body_attr = {
-    class: 'login-page bg-body-secondary',
+    class: 'login-page bg-dark-subtle',
 } %}
 
 {% block title %}{{ 'user.login.title'|trans }}{% endblock title %}
 
 {% block body %}
     <div class="login-box">
-        <div class="login-logo">
-            <a href="{{ path('homepage') }}">
-                <img alt="{{ 'user.login.alt_logo'|trans }}" src="{{ asset('images/logo.svg', 'emsadminui') }}" width="360">
-            </a>
-        </div>
-        <div class="card">
+        <div class="card card-outline card-{{ theme_color }}">
+            <div class="card-header text-center">
+                <a href="{{ path('homepage') }}" class="h1">
+                    <img alt="{{ 'user.login.alt_logo'|trans }}" src="{{ asset('images/logo.svg', 'emsadminui') }}" class="img-fluid" width="360">
+                </a>
+            </div>
             <div class="card-body login-card-body">
                 <p class="login-box-msg">{{ 'user.login.message'|trans }}</p>
 
@@ -28,20 +28,20 @@
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="{{ 'user.login.user_placeholder'|trans }}" name="_username" />
+                        <input type="text" class="form-control" placeholder="{{ 'user.login.user_placeholder'|trans }}" name="_username" aria-label="{{ 'user.login.user_aria_label'|trans }}"/>
                         <div class="input-group-text">
                             <span class="fas fa-user"></span>
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control"placeholder="{{ 'user.login.password_placeholder'|trans }}" name="_password" />
+                        <input type="password" class="form-control"placeholder="{{ 'user.login.password_placeholder'|trans }}" name="_password" aria-label="{{ 'user.login.password1_aria_label'|trans }}"/>
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-8">
-                            <div class="form-check">
+                            <div class="form-check icheck-primary">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="_remember_me"/>
                                 <label class="form-check-label" for="flexCheckDefault">&nbsp;{{ 'user.login.remember_me'|trans }}</label>
                             </div>
