feat: theme color contrast twig variable

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/admin.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/admin.html.twig
@@ -4,6 +4,7 @@
 {% set body_attr = {
     class: 'hold-transition sidebar-mini layout-fixed',
 } %}
+{%  set theme_color_contrast = theme_color in ['yellow','lime','white'] ? 'light' : 'dark' %}
 
 {% block body %}
     {% apply spaceless %}
